# PFE

Client/: test.pro
Client/En-tétes/: edit.h  loadjson_sovd.h  mainwindow.h  parsexml.h  securitymanager.h  simulation.h
Client/Formulaires/: mainwindow.ui
Client/Ressources/: ressources.qrc
Client/Sources/: edit.cpp  loadjson_sovd.cpp  main.cpp  mainwindow.cpp  parsexml.cpp  securitymanager.cpp  simulation.cpp
Client/file/: DID.xml  data.json  fault.json
Server/: CMakeLists.txt  CMakeSettings.json
Server/Main/: CMakeLists.txt
Server/Main/inc/: appMain.h
Server/Main/src/: appMain.cpp
Server/Simulation/: CMakeLists.txt
Server/Simulation/inc/: Frame.h  PCANBasic.h  TotalFrame.h  simulation.h
Server/Simulation/src/: simulation.cpp
Server/WS/: CMakeLists.txt
Server/WS/inc/: ws.h  ws_req.h
Server/WS/src/: ws.cpp  ws_req.cpp
Server/install/x86-Debug/lib/: Peak_simul.lib  WS_Server.lib
Server/ubun-main/: CMakeLists.txt  CMakeSettings.json  toolchain.cmake
Server/ubun-main/Communication/: CMakeLists.txt
Server/ubun-main/Communication/inc/: CanMessage.h  Frame.h  PCAN-ISO-TP_2016.hZone.Identifier  TotalFrame.h  pcan_communication.h  simulation.h
Server/ubun-main/Communication/src/: pcan_communication.cpp  simulation.cpp
Server/ubun-main/DDM-Server/: CMakeLists.txt
Server/ubun-main/DDM-Server/inc/: websocket_server.h  websocket_server_req.h
Server/ubun-main/DDM-Server/src/: websocket_server.cpp  websocket_server_req.cpp
Server/ubun-main/MainApp/: CMakeLists.txt
Server/ubun-main/MainApp/inc/: main_app.h
Server/ubun-main/MainApp/src/: main_app.cpp
Server/ubun-main/Test_Unitaire/: CMakeLists.txt  TestAll.cpp
Server/ubun-main/UDS-Service/: CMakeLists.txt
Server/ubun-main/UDS-Service/inc/: DID.h  SBF.h  Service.h
Server/ubun-main/UDS-Service/src/: Service.cpp
Server/ubun-main/install/x86-Debug/lib/: DDM_Server.lib  UDS_service.lib  pcan_comm.lib
